--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "pg": "^8.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "18.14.0",
+    "@types/pg": "^8.6.6",
     "@types/react": "18.0.28",
     "typescript": "4.9.5"
   }
