--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@trpc/react-query": "^10.12.0",
     "@trpc/server": "^10.12.0",
     "date-fns": "^2.29.3",
+    "file-loader": "^6.2.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
-    "pg": "^8.9.0",
     "prisma": "^4.10.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
